--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "opentelemetry-journald-logs-unofficial"
 version = "0.1.0"
 edition = "2021"
+keywords = ["opentelemetry", "journald", "logs", "tracing"]
 
 [dependencies]
 opentelemetry = {  version = "0.23" , features = ["logs"]}
