--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ opentelemetry = {  version = "0.23" , features = ["logs"]}
 opentelemetry_sdk = {  version = "0.23", features = ["logs"] }
 libc = "0.2"
 async-trait = "0.1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 opentelemetry-appender-tracing = { version ="0.4.0"}
